<resources>
    <string name="app_name">Twitter Mirroring</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_Followers">Seguidores</string>
    <string name="txt_following">Siguiendo</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_lists">Listas</string>
    <string name="menu_topics">Temas</string>
    <string name="menu_bookmarks">Guardados</string>
    <string name="menu_moments">Momentos</string>
    <string name="title_Tweet">Tweet</string>
    <string name="txt_tweets_citados">Tweets citados</string>
    <string name="txt_me_gusta">Me gusta</string>
    <string name="txt_retweets">Retweets</string>
    <string name="txt_twittea_tu_respuesta">Twittea tu respuesta</string>
</resources>